metric-kubernetes/kanban-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-service
spec:
  selector:
    app: log680-kanban
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
