metric-kubernetes/kanban-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/user01eq5/metrics(/|$)(.*)"
            backend:
              service:
                name: kanban-service
                port:
                  number: 80
